[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Asteroid3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Damage.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Misc/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Misc/BlinkAnimation.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/blink_shader.tres" type="Material" id=6]
[ext_resource path="res://Sfx/sfx_zapsplat_rock_hit2.mp3" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Misc/HitSfx.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sfx/sfx_zapsplat_rock_hit1.mp3" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.1004, 11.9644 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.5, 1.5 )

[node name="Asteroid" type="Node2D"]
script = ExtResource( 2 )
spin = 0.06
bullet = false
var1 = ExtResource( 9 )
var2 = ExtResource( 7 )
time = 4

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 6 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2147483653
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 1.28002, 1.10109 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 10

[node name="BlinkAnimation" parent="." instance=ExtResource( 5 )]

[node name="HitSfx" parent="." instance=ExtResource( 8 )]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="collided"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="screen_exited"]
[connection signal="timeout" from="Timer" to="." method="delay_to_destroy"]
[connection signal="no_health" from="Stats" to="." method="no_health"]
[connection signal="area_entered" from="Hitbox" to="." method="shockwave"]
